--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
       }
     },
     "require": {
-        "zendframework/zend-soap": "^2.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.7"
     }
 }
