--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,11 @@
         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.5/phpunit.xsd"
         bootstrap="vendor/autoload.php"
         >
+    <php>
+        <const name="CINETIXX_LOGIN" value="Your_Cinetixx_Login"/>
+        <const name="CINETIXX_PASSWD" value="Your_Cinetixx_Password"/>
+        <const name="CINEMA_ID" value="Cinema_Id"/>
+    </php>
     <testsuite name="Cinetixx CinemaWebService client tests">
         <directory>tests</directory>
     </testsuite>
