--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
       }
     },
     "require": {
+        "lean-stack/cache": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7"
