--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,6 @@
       }
     },
     "require": {
-        "lean-stack/cache": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "symfony/cache": "^3.2"
     }
 }
