--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
       }
     },
     "require": {
-        "lean-stack/cache": "^1.0"
+        "lean-stack/cache": "^1.0",
+        "zendframework/zend-soap": "^2.7"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.2"
     }
 }
