--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "lean-stack/cinetixx-client",
     "description": "Cinetixx CinemaWebService client library",
     "license": "MIT",
+    "version": "1.2.1",
     "authors": [
         {
             "name": "Micha Alt",
