--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "lean-stack/cinetixx-client",
-    "description": "Cinetixx CinemaWebService client library",
+    "description": "Cinetixx API Client Library",
     "license": "MIT",
-    "version": "1.2.1",
+    "version": "2.0.0",
     "authors": [
         {
             "name": "Micha Alt",
@@ -11,15 +11,11 @@
     ],
     "autoload": {
       "psr-4": {
-        "LeanStack\\CinetixxClient\\": "src"
+        "LeanStack\\CinetixxAPI\\": "src"
       }
     },
     "require": {
-        "lean-stack/cache": "^1.0",
-        "zendframework/zend-soap": "^2.7",
-        "sabre/xml": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
     }
 }
