--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
 		}
 	},
 	"require": {
-		"php": "^7.3.11"
+		"php": "^7.3.11",
+		"symfony/http-client": "^5.0",
+		"symfony/dom-crawler": "^5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^8.4"
