--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,4 +3,6 @@ pipelines:
   default:
     - step:
         script:
-          - php -v
+          - apt-get update && apt-get install -y unzip
+          - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+          - composer install
