--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,7 +3,7 @@
 	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/8.4/phpunit.xsd"
 >
 	<php>
-		<const name="MANDATOR_ID" value="123456789" />
+		<env name="MANDATOR_ID" value="123456789" />
 	</php>
 	<testsuites>
 		<testsuite name="Cinetixx API Client">
